force-app/main/default/objects/International_Account_Setup__c/International_Account_Setup__c.object-meta.xml
<CustomObject>
    <description>International Account Set up Form*** International account setup form hidden from all except International Sales and  Credit</description>
    <label>International Account Setup</label>
    <nameField>
        <label>Int&apos;l Account Name Setup</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>International Account Setups</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>