force-app/main/default/objects/International_Account_Setup__c/fields/Brands__c.field-meta.xml
<CustomField>
    <fullName>Brands__c</fullName>
    <label>Brands</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Irish Setter Hunt</fullName>
            </value>
            <value>
                <fullName>Irish Setter Work</fullName>
            </value>
            <value>
                <fullName>Red Wing</fullName>
            </value>
            <value>
                <fullName>Red Wing Garments</fullName>
            </value>
            <value>
                <fullName>Red Wing Heritage</fullName>
            </value>
            <value>
                <fullName>Vasque</fullName>
            </value>
            <value>
                <fullName>WORX</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>