force-app/main/default/objects/International_Account_Setup__c/fields/Country_of_Final_Destination__c.field-meta.xml
<CustomField>
    <fullName>Country_of_Final_Destination__c</fullName>
    <label>Country of Final Destination</label>
    <type>TextArea</type>
</CustomField>