force-app/main/default/objects/International_Account_Setup__c/fields/Credit_Application__c.field-meta.xml
<CustomField>
    <fullName>Credit_Application__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Attach Credit Application in the Notes &amp; Attachments related list</inlineHelpText>
    <label>Credit Application</label>
    <type>Checkbox</type>
</CustomField>