force-app/main/default/objects/International_Account_Setup__c/fields/Documentation__c.field-meta.xml
<CustomField>
    <fullName>Documentation__c</fullName>
    <inlineHelpText>We will prepare a commercial invoice and packing list for each shipment.  If you require any special documentations other than these 2 items, please explain.</inlineHelpText>
    <label>Documentation Requirements</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>