force-app/main/default/objects/International_Account_Setup__c/fields/FOB_Origin__c.field-meta.xml
<CustomField>
    <fullName>FOB_Origin__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>US Accounts; FOB, Origin (Red Wing, Salt Lake City, Houston); complete Shipping Preference field below</inlineHelpText>
    <label>FOB-Origin</label>
    <type>Checkbox</type>
</CustomField>