force-app/main/default/objects/International_Account_Setup__c/fields/Garment_Detail__c.field-meta.xml
<CustomField>
    <fullName>Garment_Detail__c</fullName>
    <inlineHelpText>If &quot;Garments&quot; is checked, fill in this Garment Detail field.</inlineHelpText>
    <label>Garment Detail</label>
    <length>30</length>
    <type>Text</type>
</CustomField>