force-app/main/default/objects/International_Account_Setup__c/fields/Garments__c.field-meta.xml
<CustomField>
    <fullName>Garments__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For Pricing section of New Account Setup</description>
    <inlineHelpText>Complete &quot;Garments Detail&quot; field below</inlineHelpText>
    <label>Garments</label>
    <type>Checkbox</type>
</CustomField>