force-app/main/default/objects/International_Account_Setup__c/fields/Incoterm__c.field-meta.xml
<CustomField>
    <fullName>Incoterm__c</fullName>
    <label>Incoterm</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ex-Works (Preferred)</fullName>
            </value>
            <value>
                <fullName>FCA Forwarder</fullName>
            </value>
            <value>
                <fullName>CIF Final Destination Port</fullName>
            </value>
            <value>
                <fullName>CFR Final Destination Port</fullName>
            </value>
            <value>
                <fullName>CPT Final Destination City</fullName>
            </value>
            <value>
                <fullName>CIP Final Destination City</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>