force-app/main/default/objects/International_Account_Setup__c/fields/Intl_Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Intl_Payment_Terms__c</fullName>
    <description>Int&apos;l Acct Set up Payment Terms</description>
    <label>Intl Payment Terms</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Open Account Term</fullName>
            </value>
            <value>
                <fullName>Letter of Credit</fullName>
            </value>
            <value>
                <fullName>Cash in Advance</fullName>
            </value>
            <value>
                <fullName>Sight Draft</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>