force-app/main/default/objects/International_Account_Setup__c/fields/Irish_Setter__c.field-meta.xml
<CustomField>
    <fullName>Irish_Setter__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For Pricing section of New Account Setup</description>
    <label>Irish Setter</label>
    <type>Checkbox</type>
</CustomField>