force-app/main/default/objects/International_Account_Setup__c/fields/Net_Days__c.field-meta.xml
<CustomField>
    <fullName>Net_Days__c</fullName>
    <inlineHelpText>If &quot;Other&quot; is chosen in the Net Days field, the &quot;Other Payment Terms&quot; field is required.</inlineHelpText>
    <label>Net Days</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>15</fullName>
            </value>
            <value>
                <fullName>30</fullName>
            </value>
            <value>
                <fullName>45</fullName>
            </value>
            <value>
                <fullName>60</fullName>
            </value>
            <value>
                <fullName>90</fullName>
            </value>
            <value>
                <fullName>120</fullName>
            </value>
            <value>
                <fullName>180</fullName>
            </value>
            <value>
                <fullName>240</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>