force-app/main/default/objects/International_Account_Setup__c/fields/Other_Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Other_Payment_Terms__c</fullName>
    <label>Other Payment Terms</label>
    <length>40</length>
    <type>Text</type>
</CustomField>