force-app/main/default/objects/International_Account_Setup__c/fields/Port_of_Discharge_Ocean__c.field-meta.xml
<CustomField>
    <fullName>Port_of_Discharge_Ocean__c</fullName>
    <label>Port of Discharge-Ocean</label>
    <length>60</length>
    <type>Text</type>
</CustomField>