force-app/main/default/objects/International_Account_Setup__c/fields/Sales_Tax_Exemption__c.field-meta.xml
<CustomField>
    <fullName>Sales_Tax_Exemption__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Attach the Sales Tax Exemption Certificate in the Notes &amp; Attachments related list</inlineHelpText>
    <label>Sales Tax Exemption Cert Attached</label>
    <type>Checkbox</type>
</CustomField>