force-app/main/default/objects/International_Account_Setup__c/fields/Shipping_collect_nbr__c.field-meta.xml
<CustomField>
    <fullName>Shipping_collect_nbr__c</fullName>
    <label>Shipping Collect #</label>
    <length>20</length>
    <type>Text</type>
</CustomField>