force-app/main/default/objects/International_Account_Setup__c/fields/Shipping_Preference__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Preference__c</fullName>
    <label>Shipping Preference</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Best Way (Prepaid and Add)</fullName>
            </value>
            <value>
                <fullName>UPS (Prepaid and Add)</fullName>
            </value>
            <value>
                <fullName>FedEx (Prepaid and Add)</fullName>
            </value>
            <value>
                <fullName>Collect (provide account number below)</fullName>
            </value>
            <value>
                <fullName>Other (provide detail below)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>