force-app/main/default/objects/International_Account_Setup__c/fields/Supplier_Vendor_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Vendor_Agreement__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Attach the Supplier/Vendor Agreement and Routing Information in the Notes &amp; Attachments related list</inlineHelpText>
    <label>Supplier/Vendor Agreement Attached</label>
    <type>Checkbox</type>
</CustomField>