force-app/main/default/objects/International_Account_Setup__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Distributor</fullName>
            </value>
            <value>
                <fullName>Retailer</fullName>
            </value>
            <value>
                <fullName>Supply House</fullName>
            </value>
            <value>
                <fullName>End-User</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>