force-app/main/default/objects/International_Account_Setup__c/fields/Vasque__c.field-meta.xml
<CustomField>
    <fullName>Vasque__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For Pricing section of New Account Setup</description>
    <label>Vasque</label>
    <type>Checkbox</type>
</CustomField>