force-app/main/default/objects/International_Account_Setup__c/fields/VAT_Employee_ID__c.field-meta.xml
<CustomField>
    <fullName>VAT_Employee_ID__c</fullName>
    <label>VAT/Employee ID #</label>
    <type>TextArea</type>
</CustomField>