force-app/main/default/objects/International_Account_Setup__c/fields/Wholesale_Distributor__c.field-meta.xml
<CustomField>
    <fullName>Wholesale_Distributor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Pricing Section of New Account Setup</description>
    <label>Wholesale (Distributor)</label>
    <type>Checkbox</type>
</CustomField>