force-app/main/default/objects/International_Account_Setup__c/fields/X15_Above_Wholesale__c.field-meta.xml
<CustomField>
    <fullName>X15_Above_Wholesale__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For Pricing section of New Account Setup</description>
    <inlineHelpText>Direct-to-Industry (IN4)</inlineHelpText>
    <label>+15% Above Wholesale</label>
    <type>Checkbox</type>
</CustomField>