force-app/main/default/objects/International_Account_Setup__c/fields/X5_Off__c.field-meta.xml
<CustomField>
    <fullName>X5_Off__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For Pricing section of New Account Setup</description>
    <inlineHelpText>(Volume Distributor) (IN3)</inlineHelpText>
    <label>-5% Off Wholesale</label>
    <type>Checkbox</type>
</CustomField>