force-app/main/default/objects/International_Account_Setup__c/fields/X7_Off_Wholesale__c.field-meta.xml
<CustomField>
    <fullName>X7_Off_Wholesale__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For Pricing section of New Account Setup</description>
    <inlineHelpText>Premium Distributor (IN1)</inlineHelpText>
    <label>-7% Off Wholesale</label>
    <type>Checkbox</type>
</CustomField>