force-app/main/default/objects/International_Account_Setup__c/validationRules/Other_Net_Days_requires_Other_Pymt_Terms.validationRule-meta.xml
<ValidationRule>
    <fullName>Other_Net_Days_requires_Other_Pymt_Terms</fullName>
    <active>true</active>
    <description>When &quot;Other&quot; is selected in the Net Days field, then the &quot;Other Payment Terms&quot; field becomes required</description>
    <errorConditionFormula>AND(
     ISPICKVAL( Net_Days__c , &quot;Other&quot;),
     ISBLANK( Other_Payment_Terms__c )
)</errorConditionFormula>
    <errorDisplayField>Other_Payment_Terms__c</errorDisplayField>
    <errorMessage>If &quot;Other&quot; is selected in the Net Days field, a value must be added to the &quot;Other Payment Terms&quot; field</errorMessage>
</ValidationRule>